changed background colour of the crowd

--- a/cheering.tex
+++ b/cheering.tex
@@ -3,6 +3,8 @@
 
 \usepackage{tikzlings}
 \setbeamertemplate{navigation symbols}{}
+\setbeamercolor{background canvas}{bg=gray!70!blue!30!white}
+
 
 \begin{document}
 
