--- a/cheering.tex
+++ b/cheering.tex
@@ -3,8 +3,7 @@
 
 \usepackage{tikzlings}
 \usepackage{tikzducks}
-\usetikzlibrary{positioning}
-\definecolor{marrone}{RGB}{215,151,66}
+\usetikzlibrary{positioning,shapes}
 
 \setbeamertemplate{navigation symbols}{}
 \setbeamercolor{background canvas}{bg=gray!70!blue!30!white}
@@ -61,6 +60,21 @@
 	]
 \end{scope}
 
+\penguin[% pingu with "honary tikzling"
+	xshift=9.7cm,
+	yshift=-2.1cm
+]
+\begin{scope}[
+	rotate around={10*cos(4*\thepage)+20:(9.95,-1.3)},
+	transform shape
+]
+	\thing[
+		signpost={\parbox{1cm}{\fontsize{5pt}{6pt}\selectfont\centering honorary tikzling}},
+		xshift=9.7cm,
+		yshift=-1.6cm
+	]
+\end{scope}
+
 \bear[% jumping bear %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 	xshift=9cm,
 	yshift=-2.5cm+sin(10*\thepage)*cos(10*\thepage)*0.25cm
@@ -86,8 +100,8 @@
 % Banner from Carla
 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\begin{scope}[scale=0.35,xshift=6cm,yshift=-13cm, transform shape]
-	\begin{scope}[xscale=-3, yscale=3]
+\begin{scope}[scale=0.35,xshift=5.5cm,yshift=-13cm, transform shape]
+	\begin{scope}[xscale=-3.5, yscale=3.5,yshift=-0.5cm]
 		\duck[% prof van duck %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 			body=yellow!50!brown!40!white,
 			crazyhair=gray!50!white,
@@ -95,11 +109,12 @@
 			glasses=brown!70!black,
 		]  
 	\end{scope}
-	\begin{scope}[xshift=18cm, scale=3]
+	\begin{scope}[xshift=19cm, scale=3.5,yshift=-0.5cm]
 		\duck[cap]% Assistant %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 	\end{scope}
 	% Banner %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 	\node[
+		tape,
 		red, 
 		fill=white,
 		font=\Huge, 
@@ -110,9 +125,9 @@
 		text centered, 
 		outer sep=0pt,
 		inner sep=0.2cm
-	] (writing) at (10,20) {Welcome Barbara!!!};
-	\draw[line width=6pt, brown] (writing.south west) -- +(1,-15); 
-	\draw[line width=6pt, brown] (writing.south east) -- +(-2,-15);
+	] (writing) at (10,21) {Welcome Barbara!!!};
+	\draw[line width=6pt, brown] (writing.south west) -- +(1,-18); 
+	\draw[line width=6pt, brown] (writing.south east) -- +(-2,-18);
 \end{scope}
 
 \end{tikzpicture}
