changed font colour from blood to blue

--- a/cheering.tex
+++ b/cheering.tex
@@ -121,7 +121,7 @@
 	% Banner %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 	\node[
 		tape,
-		red!80!black,
+		blue!80!black,
 		font=\ECFTeenSpirit\fontsize{22}{22}\selectfont,
 		fill=white,
 		scale=4,
@@ -132,10 +132,10 @@
 		outer sep=0pt,
 		inner sep=0.2cm
 	] (writing) at (10,21) {\rotatebox{2}{Welcome Barbara!!!}};
-    \node[red!80!black,scale=4,
+    \node[blue!80!black,scale=4,
 		font=\ECFTeenSpirit\fontsize{22}{22}\selectfont,]
     at (7,18.5) {.};
-      \node[red!80!black,scale=6,rotate=87,
+      \node[blue!80!black,scale=6,rotate=87,
 		font=\ECFTeenSpirit\fontsize{22}{22}\selectfont,]
     at (13,24) {.};
 	\draw[line width=6pt, brown] (writing.south west) -- +(1,-18);
