--- a/cheering.tex
+++ b/cheering.tex
@@ -1,5 +1,5 @@
 % !TeX TS-program = pdflatex
-\documentclass{beamer}
+\documentclass[xcolor={svgnames,x11names}]{beamer}
 \usepackage{emerald}
 %\usepackage[T1]{fontenc}
 \usepackage{anyfontsize}
@@ -9,7 +9,7 @@
 \usetikzlibrary{positioning,shapes}
 \definecolor{sloth}{RGB}{137,126,88}
 \setbeamertemplate{navigation symbols}{}
-\setbeamercolor{background canvas}{bg=gray!70!blue!30!white}
+\setbeamercolor{background canvas}{bg=Seashell1}
 \usetikzlibrary{shapes.callouts}
 \begin{document}
 
@@ -28,8 +28,8 @@
 \node[xshift=7.6cm,yshift=0.2cm+sin(10*\thepage)*cos(10*\thepage)*0.2cm,inner sep=0pt](bee){\includegraphics[scale=0.75]{images/tikzbee}};
 \node[cloud callout,callout absolute pointer={(bee.north)},align=center,fill=white!80!yellow,inner sep=0pt,font=\fontsize{5pt}{6pt}\selectfont] at ([xshift=0.1cm,yshift=0.3cm]bee.north east) {more\\ Beees};
    
-\penguin[xshift=6.7cm,yshift=-1.8cm,scale=0.8]
-\marmot[xshift=7.2cm,yshift=-2cm,scale=0.8]
+\cat[xshift=6.7cm,yshift=-1.8cm,scale=0.8]
+\hippo[xshift=7.2cm,yshift=-2cm,scale=0.8]
 \bear[xshift=1.5cm,yshift=-2cm,scale=0.8]
 \marmot[xshift=4cm,yshift=-2cm]
 
@@ -98,12 +98,13 @@
 ]
 
 \moles[% jumping mole %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+	body=gray!50!black,
 	xshift=1cm,
 	yshift=-3cm+sin(10*\thepage)*sin(10*\thepage)*0.3cm
 ]
 
 \sloth[xshift=4cm,yshift=-2.8cm,scale=0.8]
-\coati[xshift=5cm,yshift=-3cm,scale=0.8]
+\pig[xshift=5cm,yshift=-3cm,scale=0.8]
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
